--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <!-- Commitment to quality -->
         <section class="card" style="margin-top:18px;">
           <h3 style="color:black">Commitment to Quality</h3>
-          <p class="muted">We follow strict quality assurance from material checks to erection and dismantling procedures, aligned with industry accreditations and CPD.</p>
+          <p class="muted">We follow strict quality assurance from material <a href="https://theaslescaffoldingconsultancy.vercel.app/">checks</a> to erection and dismantling procedures, aligned with industry accreditations and CPD.</p>
         </section>
 
         <!-- FAQ -->
@@ -382,3 +382,4 @@
   </script>
 </body>
 </html>
+
